--- a/css/section.css
+++ b/css/section.css
@@ -29,6 +29,23 @@
     font-size: 18px;
 }
 
+@media (max-width: 767px) {
+    .sectionAddingTask__inputField {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .sectionAddingTask__height {
+        width: 100%;
+        text-align: center;
+    }
+
+    .sectionAddingTask__button {
+        width: 100%;
+        padding: 10px 0;
+    }
+}
+
 .sectionAddingTask__height {
     padding: 10px;
 }
@@ -50,10 +67,10 @@
     color: white;
     padding: 0;
     border: none;
-    
+
 }
 
-.section__buttonDone--checked{
+.section__buttonDone--checked {
     text-decoration: line-through;
 }
 
