--- a/css/section.css
+++ b/css/section.css
@@ -8,6 +8,19 @@
     margin: 3px;
 }
 
+.section__buttonTaskList{
+    background-color: white;
+    display: grid;
+    grid-template-columns:  1fr auto auto;
+    gap: 20px;
+    margin: 0 3px;
+}
+.section__taskListHeaderButton{
+    background-color: inherit;
+    margin: 0px;
+    padding: 10px;
+    border: none;
+}
 .section__buttonDone {
     width: 35px;
     height: 35px;
@@ -18,6 +31,8 @@
 }
 .section__headerWeight{
     font-weight: 600;
+    padding: 10px;
+    margin: 3px;
 }
 
 .section__buttonDone:hover {
@@ -47,4 +62,8 @@
 
 .section__buttonDelete:active {
     background-color: hsl(0, 65%, 70%);
+}
+
+.section__taskListHeaderButton--hide{
+    display: none;
 }
