--- a/css/sectionAddingTask.css
+++ b/css/sectionAddingTask.css
@@ -30,10 +30,12 @@
     background-color: teal;
     color: white;
     border: none;
+    transition: 1s;
 }
 
 .sectionAddingTask__button:hover {
     background-color: hsl(180, 100%, 30%);
+    transform: scale(1.1);
 }
 
 .sectionAddingTask__button:active {
